Fix NTP for BCVC fullscreen

This CL fixes the normal NTP when BCVC is fullscreen, mainly the
interactions with the overscroll actions.

Bug: 844013, 836730
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: If14d459b1261668272e492a3d0c100264811d975
Reviewed-on: https://chromium-review.googlesource.com/1065815
Reviewed-by: Kurt Horimoto <kkhorimoto@chromium.org>
Reviewed-by: Justin Cohen <justincohen@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560500}
Former-commit-id: f26e9071442a7e7e9a8fb72151aa088c4dbe0bf2