ios/chrome/browser/ui/content_suggestions/content_suggestions_header_synchronizer.mm
@@ -13,6 +13,7 @@
 #import "ios/chrome/browser/ui/content_suggestions/content_suggestions_header_controlling.h"
 #import "ios/chrome/browser/ui/content_suggestions/content_suggestions_view_controller.h"
 #import "ios/chrome/browser/ui/uikit_ui_util.h"
+#include "ios/web/public/features.h"
 
 #if !defined(__has_feature) || !__has_feature(objc_arc)
 #error "This file requires ARC support."
@@ -24,7 +25,10 @@ const CGFloat kShiftTilesUpAnimationDuration = 0.25;
 
 UIEdgeInsets SafeAreaInsetsForViewWithinNTP(UIView* view) {
   UIEdgeInsets insets = SafeAreaInsetsForView(view);
-  if (IsUIRefreshPhase1Enabled() && !base::ios::IsRunningOnIOS11OrLater()) {
+  if ((IsUIRefreshPhase1Enabled() ||
+       base::FeatureList::IsEnabled(
+           web::features::kBrowserContainerFullscreen)) &&
+      !base::ios::IsRunningOnIOS11OrLater()) {
     // TODO(crbug.com/826369) Replace this when the NTP is contained by the
     // BVC with |self.collectionController.topLayoutGuide.length|.
     insets = UIEdgeInsetsMake(StatusBarHeight(), 0, 0, 0);
